--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@ theme: "starter-hugo-academic"
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Datathon & Jobfair 2023 # Website name
+title: Datathon 2024 # Website name
 baseURL: 'https://kul-datathon-jobfair.netlify.app/' # Website URL
 
 ############################
